--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="col col-md-9">
             <div class="today">
-                <p>Today's Forecast</p>
+                <h4>Today's Forecast</h4>
                 <p>Place: <span id="place"></span></p>
                 <p>Temp: <span id="cTemp"></span></p>
                 <p>Wind: <span id="cWind"></span> MPH</p>
